Fix memory issues with the Data Reduction proxy LevelDB

Delete the whole database on DeleteHistoricalDataUsage so that the log
file isn't bloated with deletes to entries that don't exist. Also, don't
reuse the log on open.

Store if there's historical data in a pref and only clear the data usage
stats if it's been populated before.

BUG=710909

Review-Url: https://codereview.chromium.org/2810393002
Cr-Commit-Position: refs/heads/master@{#464600}

Former-commit-id: 945a5edc332c030923556edde964cce5a4e24795