components/data_reduction_proxy/core/browser/data_reduction_proxy_test_utils.cc
@@ -287,6 +287,12 @@ DataStore::Status TestDataStore::Delete(base::StringPiece key) {
   return OK;
 }
 
+DataStore::Status TestDataStore::RecreateDB() {
+  map_.clear();
+
+  return OK;
+}
+
 DataReductionProxyTestContext::Builder::Builder()
     : params_flags_(DataReductionProxyParams::kPromoAllowed),
       params_definitions_(TestDataReductionProxyParams::HAS_EVERYTHING),
